src/controllers/trustpub/github_configs/create/snapshots/crates_io__controllers__trustpub__github_configs__create__tests__happy_path_with_environment-2.snap
---
source: src/controllers/trustpub/github_configs/create/tests.rs
expression: response.json()
---
{
  "github_config": {
    "crate": "foo",
    "created_at": "[datetime]",
    "environment": "production",
    "id": 1,
    "repository_name": "foo-rs",
    "repository_owner": "rust-lang",
    "repository_owner_id": 42,
    "workflow_filename": "publish.yml"
  }
}
